--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 /*
  * z-index从1000开始编号，用来覆盖原本元素
+ * 边栏：1000
+ * 地图：1001 覆盖边栏
+ * 顶栏：1002 覆盖全部
+ * 选框：1002 覆盖全部
  */
 
 body {
@@ -43,28 +47,23 @@ img#SidebarButton {/*显示/隐藏搜索面板按钮*/
 	left: 18px;
 	top: 13px;
 }
-div#CityOption {/*城市选择选项*/
-	position: absolute;
-	right: 75px;
+img#LocBlue {/*定位按钮（蓝色）*/
+	position: fixed;
+	right: 90px;
 	top: 13px;
 }
-img#LocBlue {/*定位按钮（蓝色）*/
-	position: absolute;
-	left: 0px;
-	top: 0px;
-}
 img#OptBlue {/*城市选择选项选择按钮*/
-	position: absolute;
-	left: 100px;
-	top: 0px;
+	position: fixed;
+	right: 10px;
+	top: 13px;
 }
 p#CityName {/*城市名称*/
 	color: #2f7d99;
 	font-family: \534E\6587\9ED1\4F53;
 	font-size: 12px;
-	position: relative;
-	left: 40px;
-	top: -8px;
+	position: fixed;
+	right: 30px;
+	top: 5px;
 }
 
 /*搜索面板样式设定*/
@@ -106,9 +105,47 @@ div#SearchBox { /*起点终点搜索框样式*/
 	border-color: #ffc000;
 	border-style: solid;
 	font-size: 20px;
+	color: #a1a1a1;
 	border-width: 2px;
 	background-color: #eeeeee;
 	font-family: \534E\6587\9ED1\4F53;
 	margin-bottom: 2px;
 	margin-top: 2px;
+}
+
+/*城市候选框*/
+#CityChooseBox {
+	height: 200;
+	width: 200;
+	background-color: #EEEEEE;
+	position:fixed;
+	right: 5px;
+	top: 50px;
+	z-index: 1002;
+	border-radius: 5px;
+	-webkit-box-shadow:1px 1px 3px #999999, -1px -1px 3px #999999;
+    -moz-box-shadow:1px 1px 3px #999999, -1px -1px 3px #999999;
+    box-shadow:1px 1px 3px #999999, -1px -1px 3px #999999;
+    display: none;
+}
+
+#CityChooseBox .inputBox {
+	margin-left: 4px;
+	margin-bottom: 4px;
+	border-radius: 4px;
+	border-style: solid;
+	border-color: gray;
+	color: #a1a1a1;
+	width: 100px;
+}
+
+#CityCommit {
+	border-radius: 4px;
+	background-color: #555555;
+	width: 30px;
+	color: #eeeeee;
+	text-align: center;
+	position: absolute;
+	bottom: 7px;
+	right: 8px;
 }
