--- a/style.css
+++ b/style.css
@@ -79,13 +79,13 @@ div#SearchPanel {
 	top: 49px;
 }
 
-div#SearchPanelLabel { /*线路搜索标签*/
+div#SearchPanelLabel {/*线路搜索标签*/
 	background-color: #2f7d99;
 	font-family: \534E\6587\9ED1\4F53;
 	font-size: 15px;
 	color: white;
 	height: 70px;
-	width: 250px;
+	width: 245px;
 	position: absolute;
 	top: 0px;
 	left: 0px;
@@ -93,7 +93,7 @@ div#SearchPanelLabel { /*线路搜索标签*/
 	padding-left: 10px;
 }
 
-div#SearchBox { /*起点终点搜索框样式*/
+div#SearchBox {/*起点终点搜索框样式*/
 	position: absolute;
 	top: 50px;
 }
@@ -113,20 +113,29 @@ div#SearchBox { /*起点终点搜索框样式*/
 	margin-top: 2px;
 }
 
+#SearchResult {
+	padding-left: 5px;
+	padding-right: 5px;
+	overflow: auto;
+	margin-top: 5px;
+	height: 200px;
+	color: #EEEEEE;
+}
+
 /*城市候选框*/
 #CityChooseBox {
-	height: 200;
-	width: 200;
+	height: 45px;
 	background-color: #EEEEEE;
-	position:fixed;
+	position: fixed;
 	right: 5px;
 	top: 50px;
 	z-index: 1002;
 	border-radius: 5px;
-	-webkit-box-shadow:1px 1px 3px #999999, -1px -1px 3px #999999;
-    -moz-box-shadow:1px 1px 3px #999999, -1px -1px 3px #999999;
-    box-shadow:1px 1px 3px #999999, -1px -1px 3px #999999;
-    display: none;
+	-webkit-box-shadow: 1px 1px 3px #999999, -1px -1px 3px #999999;
+	-moz-box-shadow: 1px 1px 3px #999999, -1px -1px 3px #999999;
+	box-shadow: 1px 1px 3px #999999, -1px -1px 3px #999999;
+	display: none;
+	padding: 8px 4px 8px 4px;
 }
 
 #CityChooseBox .inputBox {
@@ -136,7 +145,9 @@ div#SearchBox { /*起点终点搜索框样式*/
 	border-style: solid;
 	border-color: gray;
 	color: #a1a1a1;
-	width: 100px;
+	width: 135px;
+	position: relative;
+	top: 8px;
 }
 
 #CityCommit {
@@ -146,6 +157,12 @@ div#SearchBox { /*起点终点搜索框样式*/
 	color: #eeeeee;
 	text-align: center;
 	position: absolute;
-	bottom: 7px;
+	bottom: 10px;
 	right: 8px;
+}
+
+.cityname {
+	text-align: center;
+	display: inline;
+	margin: 2px 2px 2px 2px;
 }
