--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ div#SearchBox {/*起点终点搜索框样式*/
 	border-color: #ffc000;
 	border-style: solid;
 	font-size: 20px;
-	color: #a1a1a1;
+	/*color: #a1a1a1;*/
 	border-width: 2px;
 	background-color: #eeeeee;
 	font-family: \534E\6587\9ED1\4F53;
@@ -121,7 +121,7 @@ div#SearchBox {/*起点终点搜索框样式*/
 #SearchResult {
 	padding-left: 5px;
 	padding-right: 5px;
-	overflow: auto;
+	overflow: hidden;
 	margin-top: 5px;
 	height: 200px;
 	color: #EEEEEE;
