--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ div#SearchBox {/*起点终点搜索框样式*/
 #SearchResult {
 	padding-left: 5px;
 	padding-right: 5px;
-	overflow: hidden;
+	overflow: auto;
 	margin-top: 5px;
 	height: 200px;
 	color: #EEEEEE;
