--- a/style.css
+++ b/style.css
@@ -6,168 +6,232 @@
  * 选框：1002 覆盖全部
  */
 
+/*@media screen and (max-width: 1024px) {
+    body {
+        min-height: 580px;
+    }
+    
+}*/
+
 body {
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	font: 12px/16px Verdana, Helvetica, Arial, sans-serif;
-	overflow: hidden;
-	overflow-x: hidden;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font: 12px/16px Verdana, Helvetica, Arial, sans-serif;
+    overflow: hidden;
+    overflow-x: hidden;
 }
 html {
-	height: 100%;
+    height: 100%;
 }
 
 /*地图样式设定*/
 div#MapView {
-	height: 100%;
-	width: 100%;
-	left: 255px;/*阴影的缘故*/
-	box-shadow: -5px 0px 15px #2a2a2a;
-	-moz-box-shadow: -5px 0px 15px #2a2a2a;
-	-webkit-box-shadow: -5px 0px 15px #2a2a2a;
-	z-index: 1001;
+    height: 100%;
+    width: 100%;
+    left: 255px;/*阴影的缘故*/
+    box-shadow: -5px 0px 15px #2a2a2a;
+    -moz-box-shadow: -5px 0px 15px #2a2a2a;
+    -webkit-box-shadow: -5px 0px 15px #2a2a2a;
+    z-index: 1001;
 }
 
 /*导航条样式设定*/
 div#NaviBar {
-	position: fixed;
-	top: 0px;
-	z-index: 100;
-	height: 50px;
-	width: 100%;
-	background-color: #eeeeee;
-	box-shadow: 0px 1px 3px #2a2a2a;
-	-moz-box-shadow: 0px 1px 3px #2a2a2a;
-	-webkit-box-shadow: 0px 1px 3px #2a2a2a;
-	z-index: 1002;
+    position: fixed;
+    top: 0px;
+    z-index: 100;
+    height: 50px;
+    width: 100%;
+    background-color: #eeeeee;
+    box-shadow: 0px 1px 3px #2a2a2a;
+    -moz-box-shadow: 0px 1px 3px #2a2a2a;
+    -webkit-box-shadow: 0px 1px 3px #2a2a2a;
+    z-index: 1002;
 }
 img#SidebarButton {/*显示/隐藏搜索面板按钮*/
-	position: absolute;
-	left: 18px;
-	top: 13px;
+    position: absolute;
+    left: 18px;
+    top: 13px;
 }
 img#LocBlue {/*定位按钮（蓝色）*/
-	position: fixed;
-	right: 90px;
-	top: 13px;
+    position: fixed;
+    right: 90px;
+    top: 13px;
 }
 img#OptBlue {/*城市选择选项选择按钮*/
-	position: fixed;
-	right: 10px;
-	top: 13px;
+    position: fixed;
+    right: 10px;
+    top: 13px;
 }
 p#CityName {/*城市名称*/
-	color: #2f7d99;
-	font-family: \534E\6587\9ED1\4F53;
-	font-size: 12px;
-	position: fixed;
-	right: 30px;
-	top: 5px;
+    color: #2f7d99;
+    font-family: \534E\6587\9ED1\4F53;
+    font-size: 12px;
+    position: fixed;
+    right: 30px;
+    top: 5px;
 }
 #RealTimeSwitch {
-	position:fixed;
-	right: 130px;
-	top: 13px;
+    position:fixed;
+    right: 130px;
+    top: 13px;
 }
 
 /*搜索面板样式设定*/
 div#SearchPanel {
-	padding: 2px 0px 0px 5px;
-	font-size: 12px;
-	z-index: 1000;
-	background-color: #555555;
-	height: 100%;
-	width: 250px;
-	position: fixed;
-	left: 0px;
-	top: 49px;
+    padding: 2px 0px 0px 5px;
+    font-size: 12px;
+    z-index: 1000;
+    background-color: #555555;
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    left: 0px;
+    top: 49px;
 }
 
 div#SearchPanelLabel {/*线路搜索标签*/
-	background-color: #2f7d99;
-	font-family: \534E\6587\9ED1\4F53;
-	font-size: 15px;
-	color: white;
-	height: 70px;
-	width: 245px;
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	padding-top: 5px;
-	padding-left: 10px;
+    background-color: #2f7d99;
+    font-family: \534E\6587\9ED1\4F53;
+    font-size: 15px;
+    color: white;
+    height: 70px;
+    width: 245px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    padding-top: 5px;
+    padding-left: 10px;
 }
 
 div#SearchBox {/*起点终点搜索框样式*/
-	position: absolute;
-	top: 50px;
+    position: absolute;
+    top: 50px;
 }
 
 #SearchBox .inputBox {
-	border-radius: 10px;
-	height: 30px;
-	width: 190px;
-	border-color: #ffc000;
-	border-style: solid;
-	font-size: 20px;
-	/*color: #a1a1a1;*/
-	border-width: 2px;
-	background-color: #eeeeee;
-	font-family: \534E\6587\9ED1\4F53;
-	margin-bottom: 2px;
-	margin-top: 2px;
+    border-radius: 10px;
+    height: 30px;
+    width: 190px;
+    border-color: #ffc000;
+    border-style: solid;
+    font-size: 20px;
+    /*color: #a1a1a1;*/
+    border-width: 2px;
+    background-color: #eeeeee;
+    font-family: \534E\6587\9ED1\4F53;
+    margin-bottom: 2px;
+    margin-top: 2px;
 }
 
 #SearchResult {
-	padding-left: 5px;
-	padding-right: 5px;
-	overflow: auto;
-	margin-top: 5px;
-	height: 200px;
-	color: #EEEEEE;
+    padding-left: 5px;
+    padding-right: 5px;
+    overflow: auto;
+    margin-top: 5px;
+    height: 200px;
+    color: #EEEEEE;
 }
 
 /*城市候选框*/
 #CityChooseBox {
-	height: 45px;
-	background-color: #EEEEEE;
-	position: fixed;
-	right: 5px;
-	top: 50px;
-	z-index: 1002;
-	border-radius: 5px;
-	-webkit-box-shadow: 1px 1px 3px #999999, -1px -1px 3px #999999;
-	-moz-box-shadow: 1px 1px 3px #999999, -1px -1px 3px #999999;
-	box-shadow: 1px 1px 3px #999999, -1px -1px 3px #999999;
-	display: none;
-	padding: 8px 4px 8px 4px;
+    height: 45px;
+    background-color: #EEEEEE;
+    position: fixed;
+    right: 5px;
+    top: 50px;
+    z-index: 1002;
+    border-radius: 5px;
+    -webkit-box-shadow: 1px 1px 3px #999999, -1px -1px 3px #999999;
+    -moz-box-shadow: 1px 1px 3px #999999, -1px -1px 3px #999999;
+    box-shadow: 1px 1px 3px #999999, -1px -1px 3px #999999;
+    display: none;
+    padding: 8px 4px 8px 4px;
 }
 
 #CityChooseBox .inputBox {
-	margin-left: 4px;
-	margin-bottom: 4px;
-	border-radius: 4px;
-	border-style: solid;
-	border-color: gray;
-	color: #a1a1a1;
-	width: 135px;
-	position: relative;
-	top: 8px;
+    margin-left: 4px;
+    margin-bottom: 4px;
+    border-radius: 4px;
+    border-style: solid;
+    border-color: gray;
+    color: #a1a1a1;
+    width: 135px;
+    position: relative;
+    top: 8px;
 }
 
 #CityCommit {
-	border-radius: 4px;
-	background-color: #555555;
-	width: 30px;
-	color: #eeeeee;
-	text-align: center;
-	position: absolute;
-	bottom: 10px;
-	right: 8px;
+    border-radius: 4px;
+    background-color: #555555;
+    width: 30px;
+    color: #eeeeee;
+    text-align: center;
+    position: absolute;
+    bottom: 10px;
+    right: 8px;
 }
 
 .cityname {
-	text-align: center;
-	display: inline;
-	margin: 2px 2px 2px 2px;
+    text-align: center;
+    display: inline;
+    margin: 2px 2px 2px 2px;
+}
+
+
+/* at start */
+.mfp-ready {
+    opacity: 0;
+/*    -webkit-transform: translateY(-20px) perspective( 600px ) rotateX( 30deg );
+    -moz-transform: translateY(-20px) perspective( 600px ) rotateX( 30deg );
+    -ms-transform: translateY(-20px) perspective( 600px ) rotateX( 30deg );
+    -o-transform: translateY(-20px) perspective( 600px ) rotateX( 30deg );
+    transform: translateY(-20px) perspective( 600px ) rotateX( 30deg );*/
+}
+
+/* animate in */
+.mfp-in {
+    opacity: 1;
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    -o-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+/*
+    -webkit-transform: translateY(0) perspective( 600px ) rotateX( 0 ); 
+    -moz-transform: translateY(0) perspective( 600px ) rotateX( 0 ); 
+    -ms-transform: translateY(0) perspective( 600px ) rotateX( 0 ); 
+    -o-transform: translateY(0) perspective( 600px ) rotateX( 0 ); 
+    transform: translateY(0) perspective( 600px ) rotateX( 0 ); */
+}
+
+/* animate out */
+.mfp-out {
+    opacity: 0;
+
+    -webkit-transition: all 0.2s ease-out;
+    -moz-transition: all 0.2s ease-out;
+    -o-transition: all 0.2s ease-out;
+    transition: all 0.2s ease-out;
+/*
+    -webkit-transform: translateY(-10px) perspective( 600px ) rotateX( 10deg ); 
+    -moz-transform: translateY(-10px) perspective( 600px ) rotateX( 10deg ); 
+    -ms-transform: translateY(-10px) perspective( 600px ) rotateX( 10deg ); 
+    -o-transform: translateY(-10px) perspective( 600px ) rotateX( 10deg ); 
+    transform: translateY(-10px) perspective( 600px ) rotateX( 10deg ); */
+}
+
+#zoom-anim-dialog {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    font-size: 1.1em;
+    background: black;
+    z-index: 1002;
+    text-align: center;
+    color: white;
+}
+
+#speed_button {
+    
 }
